src/test/deca/context/valid/print-withAffectationAndConvFloat.deca
{
    int a = 3;
    float b = 2.0;
    print(b = a);
}