src/test/deca/context/invalid/selection-protectedSoImpossible.deca
class A {
    protected float b = 2;
    int invalidMethod(){
        return 3;
    }
}

{
    A a = new A();
    print(a.b);
}